Fixed Overflow Bug

--- a/apps/trainum/src/app/auth/feature/auth-shell/auth-shell.component.scss
+++ b/apps/trainum/src/app/auth/feature/auth-shell/auth-shell.component.scss
@@ -2,6 +2,7 @@
 
 .body {
   width: 100vw;
+  max-height: 100vh;
   height: 100vh;
 
   display: flex;
